--- a/index.html
+++ b/index.html
@@ -38,12 +38,30 @@
 
 
   <div id="topic1" class="body left">
-    Topic 1
+    <div class="topic-blurb">
+      <div class="blurb-header">Topic 1 Header</div>
+      <div class="divider"></div>
+      <div class="blurb">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quia, facere, ratione eligendi iusto cum eius nobis, dolorem blanditiis quod ad! Cupiditate, vel. Molestias quod beatae, qui magnam unde aut? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ea minus, qui autem repellat vitae ullam accusantium reprehenderit quo ipsum repellendus inventore ducimus incidunt dicta obcaecati fugiat exercitationem hic velit!</p><br />
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quia, facere, ratione eligendi iusto cum eius nobis, dolorem blanditiis quod ad! Cupiditate, vel. Molestias quod beatae, qui magnam unde aut? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ea minus, qui autem repellat vitae ullam accusantium reprehenderit quo ipsum repellendus inventore ducimus incidunt dicta obcaecati fugiat exercitationem hic velit!</p>
+      </div>
+    </div>
+
+    <div class="topic1-picture topic-picture"></div>
   </div>
 
 
   <div id="topic2" class="body right">
-    Topic 2
+    <div class="topic2-picture topic-picture"></div>
+
+    <div class="topic-blurb">
+      <div class="blurb-header">Topic 2 Header</div>
+      <div class="divider"></div>
+      <div class="blurb">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quia, facere, ratione eligendi iusto cum eius nobis, dolorem blanditiis quod ad! Cupiditate, vel. Molestias quod beatae, qui magnam unde aut? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ea minus, qui autem repellat vitae ullam accusantium reprehenderit quo ipsum repellendus inventore ducimus incidunt dicta obcaecati fugiat exercitationem hic velit!</p><br />
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quia, facere, ratione eligendi iusto cum eius nobis, dolorem blanditiis quod ad! Cupiditate, vel. Molestias quod beatae, qui magnam unde aut? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ea minus, qui autem repellat vitae ullam accusantium reprehenderit quo ipsum repellendus inventore ducimus incidunt dicta obcaecati fugiat exercitationem hic velit!</p>
+      </div>
+    </div>
   </div>
 
 
