add text and change address

--- a/index.html
+++ b/index.html
@@ -7,43 +7,53 @@
   <!--Google Fonts: Roboto & Antonio-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Antonio&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-  <title>Business Name</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Antonio&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
+  <title>Next Generation Forestry</title>
 </head>
 <body>
 
 
   <div id="header">
-    <div class="header-title">
-      <!--get a placeholder svg-->
-      <div class="logo small"></div>
-      <div class="name">Business Name</div>
-    </div>
+    <a href="/">
+      <div class="header-title">
+        <div class="logo small">
+          <img src="./images/SmallLogoSVG.svg">
+        </div>
+        <div class="name">Next Generation Forestry</div>
+      </div>
+    </a>
 
     <div class="header-links">
-      <a href="URL">Link1</a>
-      <a href="URL">Link2</a>
-      <a href="URL">Link3</a>
+      <a href="/services.html">Services</a>
+      <a href="/contact.html">Contact</a>
+      <a href="/testimonials.html">Testimonials</a>
     </div>
   </div>
 
 
   <div id="top">
     <div class="top-blurb">
-      <div class="blurb-header">Header</div>
+      <div class="blurb-header">What Is a Consulting Forester?</div>
       <div class="divider"></div>
-      <div class="blurb">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quia, facere, ratione eligendi iusto cum eius nobis, dolorem blanditiis quod ad! Cupiditate, vel. Molestias quod beatae, qui magnam unde aut? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ea minus, qui autem repellat vitae ullam accusantium reprehenderit quo ipsum repellendus inventore ducimus incidunt dicta obcaecati fugiat exercitationem hic velit!</div>
+      <div class="blurb">A Consulting Forester is an independent natural resource advisor working for the 
+        landowner to give advice and counsel on all natural resource matters. The clients we 
+        choose to work with feel confident that we always have their best interests in mind. 
+        If we do not have the answers, we help the landowners find the answers, even if it 
+        means utilizing other Consulting Foresters.</div>
     </div>
   </div>
 
 
   <div id="topic1" class="body left">
     <div class="topic-blurb">
-      <div class="blurb-header">Topic 1 Header</div>
+      <div class="blurb-header">Code of Ethics</div>
       <div class="divider"></div>
       <div class="blurb">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quia, facere, ratione eligendi iusto cum eius nobis, dolorem blanditiis quod ad! Cupiditate, vel. Molestias quod beatae, qui magnam unde aut? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ea minus, qui autem repellat vitae ullam accusantium reprehenderit quo ipsum repellendus inventore ducimus incidunt dicta obcaecati fugiat exercitationem hic velit!</p><br />
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quia, facere, ratione eligendi iusto cum eius nobis, dolorem blanditiis quod ad! Cupiditate, vel. Molestias quod beatae, qui magnam unde aut? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ea minus, qui autem repellat vitae ullam accusantium reprehenderit quo ipsum repellendus inventore ducimus incidunt dicta obcaecati fugiat exercitationem hic velit!</p>
+        <p>We will provide professional assistance to persons without discrimination on the 
+          basis of race, age, ethnicity, socioeconomic status, disability, gender, health status, 
+          religion, national origin, sexual orientation, gender identity or relationship status. We 
+          expect our clients to follow the same ethical standards as us. We also take pride in 
+          serving members of under-served communities.</p>
       </div>
     </div>
 
@@ -55,11 +65,20 @@
     <div class="topic2-picture topic-picture"></div>
 
     <div class="topic-blurb">
-      <div class="blurb-header">Topic 2 Header</div>
+      <div class="blurb-header">Mission</div>
       <div class="divider"></div>
       <div class="blurb">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quia, facere, ratione eligendi iusto cum eius nobis, dolorem blanditiis quod ad! Cupiditate, vel. Molestias quod beatae, qui magnam unde aut? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ea minus, qui autem repellat vitae ullam accusantium reprehenderit quo ipsum repellendus inventore ducimus incidunt dicta obcaecati fugiat exercitationem hic velit!</p><br />
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quia, facere, ratione eligendi iusto cum eius nobis, dolorem blanditiis quod ad! Cupiditate, vel. Molestias quod beatae, qui magnam unde aut? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ea minus, qui autem repellat vitae ullam accusantium reprehenderit quo ipsum repellendus inventore ducimus incidunt dicta obcaecati fugiat exercitationem hic velit!</p>
+        <p>We are both owners of this company and have a combined 29 years of experience in 
+          all aspects of forestry and natural resources management. We are proficient in Forest 
+          Management Plans, timber purchasing, timber sales, contract writing and 
+          administration for all types of forestry contracts, all aspects of reforestation, timber 
+          cruising and appraisals, GPS and GIS, harvest unit and road design, economic 
+          feasibility studies, logging, and equipment operation.</p><br />
+        <p>We believe it's important that our clients feel confident in their land management 
+          choices, and we strive to educate them through all steps of their management process. 
+          Together we pride ourselves in teaching landowners, not just doing the work. Our 
+          clients have all earned our trust and learned so much more about forestry and their 
+          land than they had known before.</p>
       </div>
     </div>
   </div>
@@ -67,16 +86,12 @@
 
   <div id="footer">
     <div class="footer-address">
-      <span>123 Fake Road Hwy.</span>
-      <span>Place, State 01234</span>
-      <span>business@email.com</span>
-      <span>123-456-7890</span>
+      <span>Located in</span>
+      <span>Salem, OR</span>
     </div>
 
     <div class="footer-socials">
-      <a href="" class="social"></a>
-      <a href="" class="social"></a>
-      <a href="" class="social"></a>
+      <!--maybe put the logo here again or a "to top of page" link-->
     </div>
   </div>
 
