--- a/contact.html
+++ b/contact.html
@@ -65,11 +65,27 @@
   </div>
 
 
+  <div id="footer-page">
+    <div class="footer-address">
+      <span>P.O.Box 123</span>
+      <span>Cityville, ST 12345</span>
+      <span>Office Hours: 8AM - 4PM EST</span>
+    </div>
+
+    <div class="footer-top">
+      <a href="#header-page">
+        <i class="fa-solid fa-circle-up"></i>
+      </a>
+    </div>
+  </div>
+
+
 
 
 
 
 
   <script src="./func.js"></script>
+  <script src="https://kit.fontawesome.com/25a49a4783.js" crossorigin="anonymous"></script>
 </body>
 </html>
