--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="topic2-picture topic-picture"></div>
 
     <div class="topic-blurb">
-      <div class="blurb-header">Mission</div>
+      <div class="blurb-header">About Us & Our Mission</div>
       <div class="divider"></div>
       <div class="blurb">
         <p>We are both owners of this company and have a combined 29 years of experience in 
@@ -86,12 +86,15 @@
 
   <div id="footer">
     <div class="footer-address">
-      <span>Located in</span>
-      <span>Salem, OR</span>
+      <span>P.O.Box 123</span>
+      <span>Cityville, ST 12345</span>
+      <span>Office Hours: 8AM - 4PM EST</span>
     </div>
 
-    <div class="footer-socials">
-      <!--maybe put the logo here again or a "to top of page" link-->
+    <div class="footer-top">
+      <a href="#top">
+        <i class="fa-solid fa-circle-up"></i>
+      </a>
     </div>
   </div>
 
@@ -104,5 +107,6 @@
 
 
   <script src="./func.js"></script>
+  <script src="https://kit.fontawesome.com/25a49a4783.js" crossorigin="anonymous"></script>
 </body>
 </html>
