--- a/services.html
+++ b/services.html
@@ -31,20 +31,6 @@
   </div>
 
 
-  <!--design a different top for pages
-  <div id="top">
-    <div class="top-blurb">
-      <div class="blurb-header">What Is a Consulting Forester?</div>
-      <div class="divider"></div>
-      <div class="blurb">A Consulting Forester is an independent natural resource advisor working for the 
-        landowner to give advice and counsel on all natural resource matters. The clients we 
-        choose to work with feel confident that we always have their best interests in mind. 
-        If we do not have the answers, we help the landowners find the answers, even if it 
-        means utilizing other Consulting Foresters.</div>
-    </div>
-  </div>-->
-
-
   <div id="topic1" class="body left">
     <div class="topic-blurb">
       <div class="blurb-header">Land & Timber Management</div>
@@ -116,14 +102,17 @@
   </div>
 
 
-  <div id="footer">
+  <div id="footer-page">
     <div class="footer-address">
-      <span>Located in</span>
-      <span>Salem, OR</span>
+      <span>P.O.Box 123</span>
+      <span>Cityville, ST 12345</span>
+      <span>Office Hours: 8AM - 4PM EST</span>
     </div>
 
-    <div class="footer-socials">
-      <!--maybe put the logo here again or a "to top of page" link-->
+    <div class="footer-top">
+      <a href="#header-page">
+        <i class="fa-solid fa-circle-up"></i>
+      </a>
     </div>
   </div>
 
@@ -136,5 +125,6 @@
 
 
   <script src="./func.js"></script>
+  <script src="https://kit.fontawesome.com/25a49a4783.js" crossorigin="anonymous"></script>
 </body>
 </html>
