--- a/testimonials.html
+++ b/testimonials.html
@@ -82,14 +82,17 @@
   </div>
 
 
-  <div id="footer">
+  <div id="footer-page">
     <div class="footer-address">
-      <span>Located in</span>
-      <span>Salem, OR</span>
+      <span>P.O.Box 123</span>
+      <span>Cityville, ST 12345</span>
+      <span>Office Hours: 8AM - 4PM EST</span>
     </div>
 
-    <div class="footer-socials">
-      <!--maybe put the logo here again or a "to top of page" link-->
+    <div class="footer-top">
+      <a href="#header-page">
+        <i class="fa-solid fa-circle-up"></i>
+      </a>
     </div>
   </div>
 
@@ -102,5 +105,6 @@
 
 
   <script src="./func.js"></script>
+  <script src="https://kit.fontawesome.com/25a49a4783.js" crossorigin="anonymous"></script>
 </body>
 </html>
