--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Antonio&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <title>Next Generation Forestry</title>
 </head>
 <body>
@@ -19,7 +23,10 @@
         <div class="logo small">
           <img src="./images/SmallLogoSVG.svg">
         </div>
-        <div class="name">Next Generation Forestry</div>
+        <div>
+          <div class="name">Next Generation Forestry</div>
+          <div class="subtitle">Serving the Willamette Valley in Salem, OR and Surrounding Areas</div>
+        </div>
       </div>
     </a>
 
@@ -57,8 +64,9 @@
     </form>
 
     <div class="contact-info">
-      P.O.Box 123<br />
-      Cityville, ST 12345<br /><br />
+      Next Generation Forestry<br />
+      P.O. Box 4690<br />
+      Salem, OR 97302-3831<br /><br />
       Office Hours: 8AM - 4PM EST
     </div>
 
@@ -67,8 +75,8 @@
 
   <div id="footer-page">
     <div class="footer-address">
-      <span>P.O.Box 123</span>
-      <span>Cityville, ST 12345</span>
+      <span>P.O. Box 4690</span>
+      <span>Salem, OR 97302</span>
       <span>Office Hours: 8AM - 4PM EST</span>
     </div>
 
@@ -85,7 +93,6 @@
 
 
 
-  <script src="./func.js"></script>
   <script src="https://kit.fontawesome.com/25a49a4783.js" crossorigin="anonymous"></script>
 </body>
 </html>
