--- a/services.html
+++ b/services.html
@@ -8,6 +8,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Antonio&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <title>Next Generation Forestry</title>
 </head>
 <body>
@@ -19,7 +23,10 @@
         <div class="logo small">
           <img src="./images/SmallLogoSVG.svg">
         </div>
-        <div class="name">Next Generation Forestry</div>
+        <div>
+          <div class="name">Next Generation Forestry</div>
+          <div class="subtitle">Serving the Willamette Valley in Salem, OR and Surrounding Areas</div>
+        </div>
       </div>
     </a>
 
@@ -59,12 +66,14 @@
       </div>
     </div>
 
-    <div class="topic1-picture topic-picture"></div>
+    <a href="./images/LandAndTimberManagment.jpg" target="_blank" class="topic1-picture topic-picture land-n-timber">
+      <i class="fa-solid fa-magnifying-glass-plus"></i>
+    </a>
   </div>
 
 
   <div id="topic2" class="body right">
-    <div class="topic2-picture topic-picture"></div>
+    <div class="topic2-picture topic-picture reforestation"></div>
 
     <div class="topic-blurb">
       <div class="blurb-header">Silviculture & Reforestation Planning</div>
@@ -98,14 +107,14 @@
       </div>
     </div>
 
-    <div class="topic3-picture topic-picture"></div>
+    <div class="topic3-picture topic-picture natural-resource"></div>
   </div>
 
 
   <div id="footer-page">
     <div class="footer-address">
-      <span>P.O.Box 123</span>
-      <span>Cityville, ST 12345</span>
+      <span>P.O. Box 4690</span>
+      <span>Salem, OR 97302</span>
       <span>Office Hours: 8AM - 4PM EST</span>
     </div>
 
@@ -124,7 +133,6 @@
 
 
 
-  <script src="./func.js"></script>
   <script src="https://kit.fontawesome.com/25a49a4783.js" crossorigin="anonymous"></script>
 </body>
 </html>
