--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Antonio&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <title>Next Generation Forestry</title>
 </head>
 <body>
@@ -19,7 +23,10 @@
         <div class="logo small">
           <img src="./images/SmallLogoSVG.svg">
         </div>
-        <div class="name">Next Generation Forestry</div>
+        <div>
+          <div class="name">Next Generation Forestry</div>
+          <div class="subtitle">Serving the Willamette Valley in Salem, OR and Surrounding Areas</div>
+        </div>
       </div>
     </a>
 
@@ -57,12 +64,12 @@
       </div>
     </div>
 
-    <div class="topic1-picture topic-picture"></div>
+    <div class="topic1-picture topic-picture code-of-ethics"></div>
   </div>
 
 
   <div id="topic2" class="body right">
-    <div class="topic2-picture topic-picture"></div>
+    <div class="topic2-picture topic-picture about-us"></div>
 
     <div class="topic-blurb">
       <div class="blurb-header">About Us & Our Mission</div>
@@ -84,10 +91,37 @@
   </div>
 
 
+  <div id="topic-bases" class="body">
+
+    <div class="topic-blurb">
+      <div class="blurb-header">Client Base</div>
+      <div class="divider"></div>
+      <div class="blurb">
+        <div class="base-section">
+          <div class="image-base image1"></div>
+          <span>Small Private Landowners</span>
+        </div>
+        <div class="base-section">
+          <div class="image-base image2"></div>
+          <span>Local, State, and Federal Agencies</span>
+        </div>
+        <div class="base-section">
+          <div class="image-base image3"></div>
+          <span>Non-Profit Organizations</span>
+        </div>
+        <div class="base-section">
+          <div class="image-base image4"></div>
+          <span>Other Consulting Foresters</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
   <div id="footer">
     <div class="footer-address">
-      <span>P.O.Box 123</span>
-      <span>Cityville, ST 12345</span>
+      <span>P.O. Box 4690</span>
+      <span>Salem, OR 97302</span>
       <span>Office Hours: 8AM - 4PM EST</span>
     </div>
 
