change EST to PST, change wording in Services

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
       Next Generation Forestry<br />
       P.O. Box 4690<br />
       Salem, OR 97302-3831<br /><br />
-      Office Hours: 8AM - 4PM EST
+      Office Hours: 8AM - 4PM PST
     </div>
 
   </div>
@@ -77,7 +77,7 @@
     <div class="footer-address">
       <span>P.O. Box 4690</span>
       <span>Salem, OR 97302</span>
-      <span>Office Hours: 8AM - 4PM EST</span>
+      <span>Office Hours: 8AM - 4PM PST</span>
     </div>
 
     <div class="footer-top">
