--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="footer-address">
       <span>P.O. Box 4690</span>
       <span>Salem, OR 97302</span>
-      <span>Office Hours: 8AM - 4PM EST</span>
+      <span>Office Hours: 8AM - 4PM PST</span>
     </div>
 
     <div class="footer-top">
