--- a/services.html
+++ b/services.html
@@ -59,7 +59,7 @@
           <li>Economic Feasibility Studies</li>
           <li>Boundary Line Maintenance
             <ul>
-              <li>To clear brush, re-paint and maintain survey markers - note that we are not licensed surveyors, so we can only do this on existing recorded surveys.</li>
+              <li>Brush clearing, repainting, and maintaining survey markers - note that we are not licensed surveyors, so we can only do this on existing recorded surveys.</li>
             </ul>
           </li>
         </ul></p>
@@ -115,7 +115,7 @@
     <div class="footer-address">
       <span>P.O. Box 4690</span>
       <span>Salem, OR 97302</span>
-      <span>Office Hours: 8AM - 4PM EST</span>
+      <span>Office Hours: 8AM - 4PM PST</span>
     </div>
 
     <div class="footer-top">
