--- a/testimonials.html
+++ b/testimonials.html
@@ -38,18 +38,7 @@
   </div>
 
 
-  <!--design a different top for pages
-  <div id="top">
-    <div class="top-blurb">
-      <div class="blurb-header">What Is a Consulting Forester?</div>
-      <div class="divider"></div>
-      <div class="blurb">A Consulting Forester is an independent natural resource advisor working for the 
-        landowner to give advice and counsel on all natural resource matters. The clients we 
-        choose to work with feel confident that we always have their best interests in mind. 
-        If we do not have the answers, we help the landowners find the answers, even if it 
-        means utilizing other Consulting Foresters.</div>
-    </div>
-  </div>-->
+  <div id="top-pages"></div>
 
 
   <div id="topic1" class="body left">
@@ -111,6 +100,7 @@
 
 
 
+  <script src="./func.js"></script>
   <script src="https://kit.fontawesome.com/25a49a4783.js" crossorigin="anonymous"></script>
 </body>
 </html>
