--- a/services.html
+++ b/services.html
@@ -38,6 +38,9 @@
   </div>
 
 
+  <div id="top-pages"></div>
+
+
   <div id="topic1" class="body left">
     <div class="topic-blurb">
       <div class="blurb-header">Land & Timber Management</div>
@@ -133,6 +136,7 @@
 
 
 
+  <script src="./func.js"></script>
   <script src="https://kit.fontawesome.com/25a49a4783.js" crossorigin="anonymous"></script>
 </body>
 </html>
