fix header on contact page

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 <body>
 
 
-  <div id="header-page">
+  <div id="header-contact">
     <a href="/">
       <div class="header-title">
         <div class="logo small">
